--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,8 @@
   ],
   "useWorkspaces": true,
   "version": "independent",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "ignoreChanges": [
+    "**/!(README).md"
+  ]
 }
