--- a/lerna.json
+++ b/lerna.json
@@ -1,17 +1,11 @@
 {
+  "packages": [
+    "packages/*"
+  ],
+  "useWorkspaces": true,
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "ignoreChanges": [
-    "**/__fixtures__/**",
-    "**/__tests__/**",
     "**/!(README).md"
-  ],
-  "command": {
-    "publish": {
-      "allowBranch": "master",
-      "conventionalCommits": true,
-      "message": "chore(release): publish"
-    }
-  }
+  ]
 }
