--- a/packages/spinup-cli/package.json
+++ b/packages/spinup-cli/package.json
@@ -1,19 +1,14 @@
 {
-  "version": "0.0.1",
-  "name": "@gridsome/spinup-cli",
-  "description": "A command line tool for creating portals at Rebilly.",
-  "homepage": "https://github.com/Rebilly/rebilly-spinup/tree/master/packages/spinup-cli#readme",
-  "repository": "https://github.com/Rebilly/rebilly-spinup/tree/master/packages/spinup-cli",
+  "name": "@rebilly/spinup-cli",
+  "version": "0.0.0",
+  "description": "Rebilly Spinup CLI for generating websites based on Rebilly's templates",
   "main": "bin/rebilly-spinup.js",
   "license": "MIT",
   "bin": {
     "rebilly-spinup": "./bin/rebilly-spinup.js"
   },
-  "keywords": [
-    "rebilly-spinup",
-    "cli"
-  ],
   "dependencies": {
+    "@gridsome/cli": "^0.2.3",
     "@hjvedvik/tasks": "^0.0.8",
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
@@ -23,17 +18,7 @@
     "fs-extra": "^6.0.1",
     "resolve-cwd": "^2.0.0",
     "semver": "^5.6.0",
-    "sort-package-json": "^1.15.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "contributors": [
-    {
-      "name": "Rebilly team"
-    }
-  ],
-  "engines": {
-    "node": ">=8"
+    "sort-package-json": "^1.15.0",
+    "update-notifier": "^3.0.1"
   }
 }
