--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "lint": "eslint \"packages/**/*.js\""
+    "lint": "eslint \"packages/**/*.js\"",
+    "test": "jest"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.9.0",
     "lerna": "^3.16.4"
   }
 }
