--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -25,7 +25,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Lint and Test
       run: |
-        npm lint
+        npm run bootstrap
+        npm run lint
         npm test
       env:
         CI: true
