--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -25,6 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Lint and Test
       run: |
+        npm install
         npm run bootstrap
         npm run lint
         npm test
